# butlers

./: .dockerignore  .env.example  .gitignore  .reconciliation-butlers-i6gs.6.md  AGENTS.md  AUDIT_NOTES.md  CLAUDE.md  Dockerfile  Dockerfile.base  Dockerfile.whatsapp  FRONTEND_PROJECT_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MEMORY_PROJECT_PLAN.md  Makefile  PROJECT_PLAN.md  README.md  RECONCILIATION_REPORT.md  RELEASE.md  RESEARCH_DECISIONS.md  VERIFICATION_REPORT.md  cliff.toml  conftest.py  dev.sh  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.yml  model_catalog_defaults.toml  poc_router_loading.py  pricing.toml  pyproject.toml  run_hourly_rollup.py
.beads/: .gitignore  README.md  bd.sock.startlock  config.yaml  issues.jsonl
.beads/backup/: .backup-tmp-613009864  backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.codex/skills/: butlers-ui-maturity-audit
.genai/: memory.md
.github/workflows/: ci.yml  nightly.yml  release.yml
.qa/: investigation_notes.json
.verification/: bu-hb7dh.2-heartbeat-parity.md
about/: README.md  blogpost.md
about/audits/: 2026-06-13-entity-v3-spec-to-code.md
about/craft-and-care/: README.md  engineering-bar.md  interfaces-and-dependencies.md  observability-and-operations.md  performance-discipline.md  review-and-documentation.md  security-and-secrets.md  testing-and-verification.md
about/heart-and-soul/: README.md  architecture.md  design-language.md  development.md  security.md  v1-status.md  v1.md  vision.md
about/law-and-lore/: README.md
about/lay-and-land/: README.md  components.md  data-flow.md  dependencies.md  deployment.md  detail-page-audit.md  frontend-copy-inventory.md  frontend.md  integration.md  module-vs-butler.md
about/legends-and-lore/: README.md
alembic/: alembic.ini  env.py
butlers/general/: CLAUDE.md  MANIFESTO.md
butlers/health/: MANIFESTO.md  butler.toml
butlers/heartbeat/: MANIFESTO.md  butler.toml
butlers/relationship/: CLAUDE.md  butler.toml
butlers/switchboard/: CLAUDE.md
curriculum/: README.md  contribution-readiness.md  evidence-map.md  glossary.md  mastery-rubric.md  open-questions.md  repository-thesis.md  research-ledger.md
curriculum/paths/: README.md
deploy/backup/: pg_dump.sh
docker/: Dockerfile
docs/: CALENDAR_MODULE_PLAN.md  CALENDAR_MODULE_SIGNOFF.md  CALENDAR_SETUP_RUNBOOK.md  FRONTEND_PROJECT_PLAN.md  INPUT_OUTPUT_TOOLING_REFACTOR_PLAN.md  MEMORY_PROJECT_PLAN.md  PROJECT_PLAN.md  PYTEST_ACCELERATION_BENCHMARK_VRS.md  PYTEST_QG_ALTERNATIVES_QKX5.md  PYTEST_QG_BASELINE_0H6.md  PYTEST_QG_WARNINGS_RUNTIME_64VS8.md  PYTEST_RUNTIME_PROFILE_QKX1.md  PYTEST_RUNTIME_PROFILE_QKX4.md  README.md  beads-1.0-migration-prompt.md  butlers-review-improvement-cycles.md  index.md  switchboard_message_inbox_migration.md  switchboard_observability_slo.md  switchboard_spec_impl_delta_matrix.md  whatsapp-gen1-reconciliation.md  whatsapp-setup.md
docs/analysis/: gen-2-reconciliation-bu-4pxt7.md
docs/api_and_protocols/: dashboard-api.md  index.md  ingestion-envelope.md  inter-butler-communication.md  mcp-tools.md
docs/architecture/: butler-daemon.md  concurrency.md  database-design.md  email-priority-queuing.md  index.md  observability.md  one-db-multi-schema-migration-plan.md  pre-classification-triage.md  routing.md  switchboard_throughput.md  system-architecture.md  system-topology.md  thread-affinity-routing.md
docs/butlers/: home.md  (+9 more)
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
grafana/: butlers-butler.json  butlers-chronicler.json  butlers-dashboard.json  butlers-pressure.json  butlers-switchboard.json  butlers-traces.json  butlers-usage.json
openspec/: config.yaml
otel-collector/: config.yaml
pr/: dispatch-redesign-bespoke-inventory.md  dispatch-redesign-epic-00-report.md  dispatch-redesign-epic-01-report.md  dispatch-redesign-epic-02-report.md  dispatch-redesign-epic-03-report.md  dispatch-redesign-epic-04-report.md  dispatch-redesign-epic-05-report.md  dispatch-redesign-epic-06-report.md  dispatch-redesign-epic-07-report.md
prometheus/: prometheus.yml
roster/: conftest.py
scripts/: README.md  backfill_entity_fact_observed_at.py  backfill_episode_entity_id.py  backfill_episode_participants.py  backfill_ha_presence_entity_id.py  backfill_owner_episode_entity_id.py  backfill_point_event_entity_id.py  backfill_tombstone_heartbeat_episodes.py  backfill_transitory_entities.py  bump_version.py  check-no-em-dashes.py  check_for_update_joins.py  cleanup_logs.sh  clear-processes.sh  compose.sh  dedupe_orphan_contacts.py  dev-compose.sh  dev.sh  dev_entrypoint.sh  egress-firewall.sh  extract-frontend-copy.py  fix_beads_dependency_timestamps.py  init-db.sql  migrate_blobs_to_s3.py  migrate_fact_subjects.py  oauth_gate.py  one_db_data_migration.py  one_db_migration_reset_workflow.py  pg_restore.sh  pg_verify_restore.sh  release_tag.py  retract_digest_measurements.py  setup_worktree.sh  staging.py
tempo/: config.yaml
tests/: conftest.py  test_aggregate_responses.py  test_approvals_models.py  test_blob_storage.py  test_briefing_jobs.py  test_butler_migrations.py  test_changed_files.py  test_cli.py  test_cli_auth.py  test_cli_port_conflicts.py  test_codex_adapter.py  test_config.py  test_config_env_vars.py  test_context_bus.py  test_core_scheduler.py  test_core_sessions.py  test_core_spawner.py  test_core_spawner_context.py  test_core_state.py  test_credential_store.py  test_credentials.py  test_daemon.py  test_daemon_get_attachment_tool.py  test_daemon_spans.py  test_db.py  test_decomposition.py  test_dev_sh_logging_contract.py  test_dsa4_validation.py  test_e2e_benchmark.py  test_e2e_envelopes_and_scenarios.py  test_e2e_execution_modes.py  test_e2e_reporting.py  test_e2e_scoring.py  test_education_analytics_mcp_guardrails.py  test_education_mind_map_staleness.py  test_email_pipeline.py  test_engagement_detection.py  test_extraction.py  test_finance_dedup.py  test_finance_transaction_crud.py  (+65 more)
whatsapp-bridge/: go.mod  go.sum
(+5025 files in other folders)
