[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "butlers"
version = "0.1.0"
description = "AI agent framework — long-running MCP server daemons with pluggable modules"
requires-python = ">= 3.12"
dependencies = [
    "fastmcp",
    "claude-code-sdk",
    "asyncpg",
    "croniter",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "click",
    "pydantic",
    "alembic",
    "sqlalchemy",
    "psycopg2-binary",
    "vobject>=0.9.9",
    "fastapi",
    "uvicorn",
    "httpx",
    "sentence-transformers",
    "pgvector",
    "structlog",
    "prometheus-client",
    "pillow>=10.0.0",
    "telethon>=1.36.0",
]

[project.optional-dependencies]
connectors = [
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "testcontainers[postgres]",
    "pytest-xdist>=3.8.0",
]

[project.scripts]
gmail-connector = "butlers.connectors.gmail:main"
telegram-user-client-connector = "butlers.connectors.telegram_user_client:run_telegram_user_client_connector"
butlers = "butlers.cli:cli"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# SQL migrations and tests have long SQL strings that shouldn't be split
"roster/*/migrations/*.py" = ["E501"]
"roster/*/tests/test_*_migrations.py" = ["E501"]

[tool.ruff.lint.isort]
# Butler-specific tools are dynamically loaded from roster/<name>/tools.py
# at runtime, but ruff can't detect them as first-party without this hint.
known-first-party = ["butlers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests", "roster"]
# importlib mode avoids module-name collisions when multiple butler test
# directories contain identically-named files (e.g. test_tools.py).
addopts = "--import-mode=importlib"
markers = [
    "unit: Pure unit tests — no Docker, no external services",
    "integration: Integration tests — require Docker (testcontainers)",
    "e2e: End-to-end tests — require ANTHROPIC_API_KEY, claude binary, and Docker",
]
