[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "butlers"
version = "0.1.0"
description = "AI agent framework — long-running MCP server daemons with pluggable modules"
requires-python = ">= 3.12"
dependencies = [
    "fastmcp",
    "claude-agent-sdk",
    "asyncpg",
    "croniter",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "click",
    "pydantic",
    "alembic",
    "sqlalchemy",
    "psycopg2-binary",
    "vobject>=0.9.9",
    "fastapi",
    "uvicorn",
    "httpx",
    "aiohttp>=3.9",
    "sentence-transformers",
    "pgvector",
    "structlog",
    "prometheus-client",
    "pillow>=10.0.0",
    "telethon>=1.36.0",
]

[project.optional-dependencies]
connectors = [
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "testcontainers[postgres]",
    "pytest-xdist>=3.8.0",
]

[project.scripts]
gmail-connector = "butlers.connectors.gmail:main"
telegram-user-client-connector = "butlers.connectors.telegram_user_client:run_telegram_user_client_connector"
butlers = "butlers.cli:cli"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# SQL migrations and tests have long SQL strings that shouldn't be split
"roster/*/migrations/*.py" = ["E501"]
"roster/*/tests/test_*_migrations.py" = ["E501"]

[tool.ruff.lint.isort]
# Butler-specific tools are dynamically loaded from roster/<name>/tools.py
# at runtime, but ruff can't detect them as first-party without this hint.
known-first-party = ["butlers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests", "roster"]
# importlib mode avoids module-name collisions when multiple butler test
# directories contain identically-named files (e.g. test_tools.py).
# -n auto: xdist parallel execution using all available CPUs (~72% faster).
# --dist loadfile: keeps tests from the same file on the same worker so that
#   module-scoped fixtures (e.g. shared FastAPI app, module-scoped DB pools)
#   are not torn down and recreated across workers mid-module.
addopts = "--import-mode=importlib -m 'not nightly' -n auto --dist loadfile"
markers = [
    "unit: Pure unit tests — no Docker, no external services",
    "integration: Integration tests — require Docker (testcontainers)",
    "e2e: End-to-end tests — require ANTHROPIC_API_KEY, claude binary, and Docker",
    "nightly: Long-running tests excluded from default CI (run with -m nightly)",
]
filterwarnings = [
    # Third-party websockets/uvicorn deprecation: tracked upstream, not actionable here
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:uvicorn",
    # unittest.mock.AsyncMock creates internal coroutines that aren't directly awaited
    # when used as an async context manager (pool.acquire()). These are mock artifacts,
    # not production coroutine leaks. Suppress to keep QG output clean.
    "ignore:coroutine 'AsyncMockMixin.*' was never awaited:RuntimeWarning",
    # EmailModule._check_and_route_inbox deprecation warning is intentional and verified
    # by tests/integration/test_no_duplicate_ingestion.py. The asyncio event loop fires
    # the warning from a different frame during asyncio.run(), so suppress the duplicate.
    "ignore:EmailModule.*deprecated.*:DeprecationWarning",
    # Telegram/Gmail connector health server port conflicts during parallel test execution
    # (xdist workers may start health servers on the same port). Tracked as a test-isolation
    # concern; the underlying connector code is correct.
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]
