[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "butlers"
version = "0.1.0"
description = "Single-user personal butler system — autonomous AI daemons managing daily life domains"
requires-python = ">= 3.12"
dependencies = [
    "fastmcp",
    "asyncpg",
    "croniter",
    "icalendar>=5.0.0",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "click",
    "pydantic",
    "alembic",
    "sqlalchemy",
    "psycopg2-binary",
    "vobject>=0.9.9",
    "fastapi",
    "uvicorn",
    "httpx",
    "aiohttp>=3.9",
    "sentence-transformers",
    "pgvector",
    "structlog",
    "prometheus-client",
    "pillow>=10.0.0",
    "telethon>=1.36.0",
    "wyoming>=1.8.0",
    "aioboto3>=13.0.0",
    "cryptography>=42.0.0",
    "markdown>=3.10.2",
]

[tool.uv]
# uv.lock is committed; CI and Docker use `uv sync --frozen` to guarantee
# reproducible installs. The required-environments declaration keeps the lockfile
# resolvable on x86_64 Linux: without it, uv may select a cryptography release
# (e.g. 49.0.0) that ships no x86_64-linux wheel and no sdist, breaking installs
# before any test runs. The resolver backtracks to a version that does have a
# wheel. When cryptography ships x86_64-linux wheels for newer versions, this
# hint can be removed.
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[project.optional-dependencies]
connectors = [
]
live-listener = [
    "sounddevice>=0.4.6",
    "onnxruntime>=1.17.0",
    "numpy>=1.26.0",
]
whatsapp = [
    "qrcode[pil]>=7.4.2",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "testcontainers[postgres]",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=7.0.0",
    "moto[s3,server]>=5.0.0",
]

[project.scripts]
gmail-connector = "butlers.connectors.gmail:main"
google-calendar-connector = "butlers.connectors.google_calendar:main"
google-drive-connector = "butlers.connectors.google_drive:main"
steam-connector = "butlers.connectors.steam:main"
telegram-user-client-connector = "butlers.connectors.telegram_user_client:run_telegram_user_client_connector"
discord-user-connector = "butlers.connectors.discord_user:run_discord_user_connector"
butlers = "butlers.cli:cli"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Tests use long descriptive docstrings and SQL literals; formatting keeps
# readability better than forced wrapping for these cases.
"tests/**/*.py" = ["E501"]
"roster/*/tests/**/*.py" = ["E501"]

# SQL migrations and tests have long SQL strings that shouldn't be split
"roster/*/migrations/*.py" = ["E501"]
"roster/*/tests/test_*_migrations.py" = ["E501"]
"tests/config/test_migrations.py" = ["E501"]
"tests/config/test_switchboard_*_migration.py" = ["E501"]

[tool.ruff.lint.isort]
# Butler-specific tools are dynamically loaded from roster/<name>/tools.py
# at runtime, but ruff can't detect them as first-party without this hint.
known-first-party = ["butlers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests", "roster"]
# importlib mode avoids module-name collisions when multiple butler test
# directories contain identically-named files (e.g. test_tools.py).
# -n 3: xdist parallel execution capped at 3 workers to avoid OOM when
#   multiple polecats run quality gates concurrently alongside k3s workloads.
# --dist loadfile: keeps tests from the same file on the same worker so that
#   module-scoped fixtures (e.g. shared FastAPI app, module-scoped DB pools)
#   are not torn down and recreated across workers mid-module.
addopts = "--import-mode=importlib -m 'not nightly and not bench and not perf' -n 3 --dist loadfile --ignore=tests/benchmarks"
markers = [
    "unit: Pure unit tests — no Docker, no external services",
    "smoke: Fast operational smoke gate — no real LLM spawned; Docker allowed for DB-backed assertions",
    "integration: Integration tests — require Docker (testcontainers)",
    "e2e: End-to-end tests — require authenticated CLI runtime, claude binary, and Docker",
    "benchmark: Benchmark mode tests — iterate over models, accumulate results, generate scorecards",
    "routing_accuracy: E2E routing accuracy tests — verify triage_target matches expected_routing",
    "tool_accuracy: E2E tool-call accuracy tests — verify expected tool names are called",
    "nightly: Long-running tests excluded from default CI (run with -m nightly)",
    "bench: All Ollama model benchmarks — require live endpoint (run with -m bench)",
    "discretion_bench: Discretion layer FORWARD/IGNORE classification benchmarks",
    "switchboard_bench: Switchboard routing accuracy benchmarks",
    "db: Database integration tests — require Docker (testcontainers with real PostgreSQL)",
    "contract: Architectural contract tests — validate invariants from heart-and-soul doctrine and key RFCs",
    "perf: Performance/scale tests — seed large datasets and measure query latency; opt-in via -m perf",
]
filterwarnings = [
    # Third-party websockets/uvicorn deprecation: tracked upstream, not actionable here
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:uvicorn",
    # unittest.mock.AsyncMock creates internal coroutines that aren't directly awaited
    # when used as an async context manager (pool.acquire()). These are mock artifacts,
    # not production coroutine leaks. Suppress to keep QG output clean.
    "ignore:coroutine 'AsyncMockMixin.*' was never awaited:RuntimeWarning",
    # Telegram/Gmail connector health server port conflicts during parallel test execution
    # (xdist workers may start health servers on the same port). Tracked as a test-isolation
    # concern; the underlying connector code is correct.
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.coverage.run]
source = ["src/butlers"]

[tool.coverage.report]
show_missing = true
skip_empty = true
